force-app/main/default/objects/AH_PLCM_MM_Room_Details__c/AH_PLCM_MM_Room_Details__c.object-meta.xml
<CustomObject>
    <description>This object contains the Meeting Matrix room details.</description>
    <label>MM Room Details</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Function Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MM Room Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>