force-app/main/default/objects/AH_PLCM_MM_Room_Details__c/fields/MM_Ceiling_Height__c.field-meta.xml
<CustomField>
    <fullName>MM_Ceiling_Height__c</fullName>
    <description>Ceiling Height of Function Room</description>
    <inlineHelpText>What is the Ceiling Height of this Function Room?</inlineHelpText>
    <label>Ceiling Height</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>