force-app/main/default/objects/AH_PLCM_MM_Room_Details__c/fields/MM_Floor_Plan_Level__c.field-meta.xml
<CustomField>
    <fullName>MM_Floor_Plan_Level__c</fullName>
    <description>Name of the level this room is located on at the property (ex. Ballroom level, Ground Floor, Mezzanine, etc.)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Which floor plan level is this room located on at this property?  (ex. Ballroom level, Ground Floor, Mezzanine, etc.)</inlineHelpText>
    <label>Floor Plan Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>