force-app/main/default/objects/AH_PLCM_MM_Room_Details__c/fields/MM_Function_Room_Type__c.field-meta.xml
<CustomField>
    <fullName>MM_Function_Room_Type__c</fullName>
    <description>Function Room type:  Stand Alone (default)
Indivisible
Combination</description>
    <inlineHelpText>Is this Function Room a Stand Alone, Indivisible, or Combination room?</inlineHelpText>
    <label>Function Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stand Alone</fullName>
                <default>true</default>
                <label>Stand Alone</label>
            </value>
            <value>
                <fullName>Indivisible</fullName>
            </value>
            <value>
                <fullName>Combination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>