force-app/main/default/objects/AH_PLCM_MM_Room_Details__c/fields/MM_Is_Reception_Only__c.field-meta.xml
<CustomField>
    <fullName>MM_Is_Reception_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reception Only should be marked True.</description>
    <inlineHelpText>Is this a Reception Only room?  If so, mark the checkbox.</inlineHelpText>
    <label>Reception Only?</label>
    <type>Checkbox</type>
</CustomField>