force-app/main/default/objects/AH_PLCM_MM_Room_Details__c/fields/MM_Is_Seating_Orientation_Non_Std__c.field-meta.xml
<CustomField>
    <fullName>MM_Is_Seating_Orientation_Non_Std__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Industry standards suggest orienting seats away from main entry point. If this differs in any rooms please mark checkbox and provide info in Details.</description>
    <inlineHelpText>Industry standards suggest orienting seats away from main entry point. If this differs in any rooms please mark checkbox and provide info in Details.</inlineHelpText>
    <label>Seating Orientation is Non-Standard</label>
    <type>Checkbox</type>
</CustomField>