force-app/main/default/objects/AH_PLCM_MM_Room_Details__c/fields/MM_NI_Doc_Record__c.field-meta.xml
<CustomField>
    <fullName>MM_NI_Doc_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project</description>
    <inlineHelpText>Project</inlineHelpText>
    <label>NI Doc Record</label>
    <referenceTo>NI_Documentation__c</referenceTo>
    <relationshipLabel>MM Room Details</relationshipLabel>
    <relationshipName>MM_Room_Details</relationshipName>
    <type>Lookup</type>
</CustomField>