force-app/main/default/objects/AH_PLCM_MM_Room_Details__c/fields/MM_Seating_Orientation_Details__c.field-meta.xml
<CustomField>
    <fullName>MM_Seating_Orientation_Details__c</fullName>
    <description>Provide Non-Standard Seating Orientation details if &apos;Seating Orientation is Non-Standard = True&apos;</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If you checked Non-Standard Seating Orientation above, please provide orientation details here.</inlineHelpText>
    <label>Seating Orientation Details</label>
    <type>TextArea</type>
</CustomField>