force-app/main/default/objects/AH_PLCM_MM_Room_Details__c/fields/MM_Source_Location__c.field-meta.xml
<CustomField>
    <fullName>MM_Source_Location__c</fullName>
    <description>Source Location could be the name of the MeetingMatrix room diagram file (xxxxxx.MMR), the label of a room within a CAD file (Meeting Room 103B), etc.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is your Source Location?</inlineHelpText>
    <label>Source Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>