force-app/main/default/objects/AH_PLCM_MM_Room_Details__c/fields/MM_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>MM_Source_Type__c</fullName>
    <description>Type of source data.</description>
    <inlineHelpText>What is the source of your diagramming data?</inlineHelpText>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MM</fullName>
                <default>true</default>
                <label>MM</label>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>Onsite (Total Station)</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>