force-app/main/default/objects/AH_PLCM_MM_Room_Details__c/fields/MM_Square_Feet__c.field-meta.xml
<CustomField>
    <fullName>MM_Square_Feet__c</fullName>
    <description>Square Feet (area) of Function Room.</description>
    <inlineHelpText>What is the Square Footage (area) of this Function Room?</inlineHelpText>
    <label>Square Feet</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>